@@ -831,6 +831,7 @@ typedef BOOLEAN (NTAPI *PPH_ENUM_GENERIC_MODULES_CALLBACK)(
     );
 
 #define PH_ENUM_GENERIC_MAPPED_FILES 0x1
+#define PH_ENUM_GENERIC_MAPPED_IMAGES 0x2
 
 PHLIBAPI
 NTSTATUS PhEnumGenericModules(
